# ebuild

./: README  overlay.xml
dev-cpp/blaze/: Manifest  blaze-3.8.2.ebuild
dev-cpp/kleidiai/: Manifest  kleidiai-1.9.0.ebuild
dev-cpp/libcopp/: Manifest  libcopp-1.3.5.ebuild  libcopp-2.3.1.ebuild
dev-libs/boost-ext-di/: Manifest  boost-ext-di-1.3.2.ebuild
dev-libs/cJSON/: Manifest  cJSON-1.7.14.ebuild
dev-libs/ck/: Manifest  ck-0.3.5.ebuild  ck-0.7.2.ebuild
dev-libs/cryptopp/: Manifest  cryptopp-5.6.2.ebuild
dev-libs/cryptopp/files/: CMakeLists.txt
dev-libs/dgfsdk/: Manifest  dgfsdk-1.1.0.ebuild  dgfsdk-1.2.0.ebuild
dev-libs/dgfsdk/files/: disable-directx-1.2.0.diff  disable-directx.diff
dev-libs/fcppt/: Manifest  fcppt-9999.ebuild
dev-libs/fx-gltf/: Manifest  fx-gltf-1.2.0.ebuild  fx-gltf-2.0.0.ebuild
dev-libs/gct/: Manifest  gct-9999.ebuild
dev-libs/hyperscan/: Manifest  hyperscan-5.4.2.ebuild
dev-libs/hyperscan/files/: avoid-cmake-version-error.diff
dev-libs/json11/: Manifest  json11-1.0.0.ebuild
dev-libs/json11/files/: json11-1.0.0-libdir.patch
dev-libs/libnnef/: 0000-lib64.diff  Manifest  libnnef-1.0.10.ebuild  libnnef-9999.ebuild
dev-libs/libnnef/files/: libnnef-lib64.patch
dev-libs/magic_enum/: Manifest  magic_enum-0.7.3.ebuild
dev-libs/midifile/: Manifest  midifile-9999.ebuild  midifile.ebuild
dev-libs/nt2/: Manifest  nt2-9999.ebuild
dev-libs/ocl-icd/: Manifest  ocl-icd-2.1.3.ebuild
dev-libs/pffft/: Manifest  pffft-9999.ebuild
dev-libs/pffft/files/: pffft-9999-install.patch
dev-libs/pion/: Manifest  pion-9999.ebuild
dev-libs/rapidxml/: Manifest  rapidxml-1.17.ebuild
dev-libs/spirv-reflect/: Manifest  spirv-reflect-9999.ebuild
dev-libs/sprout/: Manifest  sprout-9999.ebuild
dev-libs/sprout/files/: disable_tests.patch
dev-libs/vulkan2json/: Manifest  vulkan2json-9999.ebuild
dev-perl/HTML-TagParser/: HTML-TagParser-0.20.ebuild  Manifest  metadata.xml
dev-python/midiscript/: Manifest  midiscript-0.2.4.ebuild
dev-python/midiutil/: Manifest  midiutil-1.2.1.ebuild
dev-python/nnef-tools/: Manifest  nnef-tools-1.0.10.ebuild  nnef-tools-9999.ebuild
dev-util/amgcl/: Manifest  amgcl-1.4.4.ebuild
dev-util/astc-encoder/: Manifest  astc-encoder-5.3.0.ebuild  metadata.xml
dev-util/astc-encoder/files/: astc-encoder-5.3.0-disable-march-native.patch
dev-util/betsy/: Manifest  betsy-1.1_beta.ebuild
dev-util/betsy/files/: cxx17.diff
dev-util/compressonator/: Manifest  compressonator-4.5.52.ebuild
dev-util/compressonator/files/: use-external-glfw.diff
dev-util/cuttlefish/: Manifest  cuttlefish-2.10.1.ebuild
dev-util/glslang/: Manifest  glslang-1.3.224.ebuild
dev-util/kram/: Manifest  kram-1.7.30.ebuild
dev-util/kram/files/: clang.diff
dev-util/mba/: Manifest  mba-9999.ebuild
dev-util/opencl-headers/: Manifest
dev-util/pocl/: Manifest  pocl-9999.ebuild
dev-util/shady/: Manifest  shady-9999.ebuild
dev-util/spirv-headers/: Manifest  metadata.xml
dev-util/spirv-tools/: Manifest  metadata.xml
dev-util/todds/: Manifest  todds-0.4.1.ebuild
dev-util/viennacl/: Manifest  viennacl-1.5.1.ebuild  viennacl-9999.ebuild
dev-util/vulkan-headers/: Manifest
dev-util/vulkan-profiles/: Manifest  vulkan-profiles-1.3.224.ebuild
dev-util/vulkan-tools/: Manifest
games-util/basis_universal/: Manifest  basis_universal-2.0.3.ebuild
gui-apps/lswt/: Manifest  lswt-2.0.0.ebuild
gui-apps/wlr-randr/: Manifest  wlr-randr-0.5.0.ebuild
media-gfx/KTX-Software/: KTX-Software-4.4.0.ebuild  KTX-Software-4.4.2.ebuild  Manifest
media-gfx/KTX-Software/files/: KTX-Software-4.4.0-remove-O3.patch  KTX-Software-4.4.0-remove-Werror.patch  KTX-Software-4.4.2-malloc.patch
media-libs/gli/: Manifest  gli-0.8.2.0f.ebuild
media-libs/gli/files/: use-system-glm.diff
media-libs/juce/: Manifest
media-libs/shaderc/: Manifest  shaderc-2022.4.ebuild
media-libs/shaderc/files/: shaderc-2020.4-fix-build.patch
media-libs/vst-sdk/: Manifest  vst-sdk-3.8.0.ebuild
media-libs/vulkan-layers/: Manifest  metadata.xml  vulkan-layers-1.3.224.ebuild
media-libs/vulkan-loader/: Manifest  metadata.xml
profiles/: repo_name
sys-cluster/cman/: Manifest  cman-3.2.0.ebuild
sys-cluster/libccs/: Manifest  libccs-3.2.0.ebuild
sys-cluster/libcman/: Manifest  libcman-3.2.0.ebuild
sys-cluster/libdlm/: Manifest
sys-fs/gfs2-utils/: Manifest  gfs2-utils-3.1.3.ebuild
www-client/chromium/: Manifest  chromium-136.0.7103.113.ebuild  chromium-137.0.7151.103.ebuild
www-client/chromium/files/: vpx_config.h  vpx_thread.h  xnnpack.gn
www-client/dillo/: Manifest  dillo-3.2.0.ebuild  dillo-9999.ebuild
x11-drivers/nvidia-drivers/: Manifest  nvidia-drivers-331.38.ebuild
x11-misc/i3status-rust/: Manifest  i3status-rust-0.36.1.ebuild
(+1 files in other folders)
